# Chess-Engine

./: .gitattributes  .gitignore  ChessTests  README.md  bugs.txt  test pgn  test_output.txt  tests.md
.github/workflows/: deploy.yml
chess-analysis-app/: .gitignore  CMakeLists.txt  OPTIMIZATION_LOG.md  README.md  build_log.txt  build_log_utf8.txt  eslint.config.js  index.html  package-lock.json  package.json  test.pgn  test_check.cpp  test_output.txt  vite.config.js
chess-analysis-app/src/: App.css  App.jsx  App.test.jsx  engine.js  main.cpp  setupTests.js  uci-parser.js
chess-analysis-app/src/components/: AnalysisStats.jsx  BoardControls.jsx  ControlPanel.jsx  EvaluationBar.jsx  MoveHistory.jsx  MoveHistory.test.jsx  constants.js  utils.js  utils.test.js
chess-analysis-app/src/core/: board.cpp  board.hpp  clipboard_win32.cpp  game_record.hpp  move_gen.cpp  move_utils.hpp  types.cpp  types.hpp
chess-analysis-app/src/engine/: game_reviewer.cpp  game_reviewer.hpp  stockfish.cpp  stockfish.hpp
chess-analysis-app/src/gui/: layout.hpp
chess-analysis-app/src/libs/raylib-5.0/: CMakeLists.txt
chess-analysis-app/tests/: benchmark.cpp  test_runner.cpp
verification/: verify_bounds.py  verify_pgn.py  verify_pgn_analysis.py
